# usajobs-scrape-and-browse

./: .env_template  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/api/: Dockerfile
docker/etl/: Dockerfile
scripts/: run-api.sh  run-etl.sh
src/api/: main.py
src/api/repositories/: es_repository.py  job_repository.py  models.py  queries.py
src/api/routers/: dependencies.py  jobs.py  organizations.py  schema.py
src/api/services/: job_service.py
src/jobs/jobs/: config.py  elastic.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py  utils_test.py
src/jobs/jobs/spiders/: base.py  usajobs.py
src/tests/: jobs_test.py
